--- a/style.css
+++ b/style.css
@@ -44,9 +44,17 @@ body {
     transition: .5s ;
 }
 
-.navbar-nav a:hover {
-    background-color: var(--green-color);
+.navbar-nav a::after {
+    content: '';
+    display: block;
+    width: 0;
+    border-bottom: 2.5px solid var(--green-color);
     border-radius: 20px;
+    transition: .3s ease-in-out;
+}
+
+.navbar-nav a:hover::after {
+    width: 100%;
 }
 
 #hamburger {
@@ -69,11 +77,17 @@ header {
 .header-kanan {
     background-image: url(assets/header.jpg);
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 .title-header {
     width: 100%;
     height: 300px;
+}
+
+.tagline-wrapper {
+    width: 80%;
 }
 
 .title-header p {
@@ -97,6 +111,7 @@ header {
     font-size: 2.2rem;
     margin-bottom: 5px;
     font-weight: 500;
+    line-height: 2.9rem;
 }
 
 .tagline button {
@@ -139,7 +154,7 @@ span i {
 
 /* sec3 */
 #sec3 {
-    height: 500px;
+    height: 100%;
     background-color: var(--blue-color);
     color: var(--white-color);
     padding: 20px 5px;
@@ -166,20 +181,16 @@ span i {
 }
 
 .container-sec3 .img1 {
-    position: absolute;
-    width: 180px;
-    height: 354px;
-    top: 3rem;
-    left: 2rem;
+    width: 170px;
+    height: 314px;
     border: 3px solid var(--white-color);
 }
 .container-sec3 .img2 {
-    position: absolute;
-    width: 143px;
-    height: 262px;
-    right: 100px;
-    bottom: 30px;
+    width: 153px;
+    height: 282px;
     border: 3px solid var(--white-color);
+    margin-left: 2rem;
+    margin-bottom: -1.5rem;
 }
 
 .container-sec3 .right-sec3 {
@@ -203,24 +214,6 @@ span i {
     color: var(--green-color);
 }
 
-.container-sec3 .left-sec3 .star {
-    position: absolute;
-}
-
-.container-sec3 .left-sec3 .star-1 {
-    right: 50%;
-    top: 80px;
-}
-
-.container-sec3 .left-sec3 .star-2 {
-    right: 45%;
-    top: 110px;
-}
-
-.container-sec3 .left-sec3 .star-3 {
-    bottom: 10%;
-
-}
 
 
 /* sec4 */
@@ -228,14 +221,17 @@ span i {
     height: 100%;
     width: 100%;
     padding: 1.2rem 1.8rem;
+    padding-bottom: 3rem;
     background-color: var(--white-color);
+    text-transform: capitalize;
 }
 
 .container-sec4 .left-sec4 {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 8rem;
 }
 
 .container-sec4 .title-sec4 {
@@ -243,12 +239,27 @@ span i {
     font-size: 4.4rem;
     letter-spacing: 2px;
     color: var(--text-color);
+    text-transform: capitalize;
 }
 
 .container-sec4 .desc-sec4 {
-    font-family: 'rasa';
-    font-size: 1.5rem;
+    font-family: 'quicksand';
+    font-size: 1.2rem;
+    font-weight: 400;
     color: var(--text-color);
+}
+
+.container-sec4 .left-sec4 .container-img-left .img-left {
+    position: absolute;
+    object-fit: cover;
+    transition: .4s ease-out;
+    width: 100%;
+    height: 100%;
+}
+
+.container-sec4 .left-sec4 .container-img-left:hover .img-left{
+    transform: scale(1.1);
+    object-fit: cover;
 }
 
 .container-sec4 .sofa {
@@ -258,15 +269,13 @@ span i {
 .container-sec4 .left-sec4 .container-img-left {
     width: 501px;
     height: 255px;
-}
-
-.container-sec4 .left-sec4 .img-left {
-    width: 100%;
-    height: 100%;
-    background-size: cover;
+    position: relative;
+    isolation: isolate;
+    overflow: hidden;
     border-radius: var(--border-radius);
     border: var(--border-img);
 }
+
 
 .container-sec4 .text-left {
     position: relative;
@@ -276,7 +285,7 @@ span i {
 .container-sec4 .right-sec4 {
     display: flex;
     justify-content: center;
-    gap: 5.8rem;
+    gap: 7.8rem;
     margin-top: 4.7rem;
     text-align: right;
 }
@@ -284,27 +293,261 @@ span i {
 .container-sec4 .container-img-stairs {
     width: 214px;
     height: 398px;
+    position: relative;
+    border-radius: var(--border-radius);
+    border: var(--border-img);
+    overflow: hidden;
+    isolation: isolate;
 }
 
 .container-sec4 .container-img-stairs .img-stairs {
-    border-radius: var(--border-radius);
-    border: var(--border-img);
+    position: absolute;
     width: 100%;
     height: 100%;
-    background-size: cover;
+    object-fit: cover;
+    bottom: 0;
+    left: 0;
+    transition: .4s ease-out;
+}
+
+.container-sec4 .container-img-stairs .img-stairs:hover {
+    transform: scale(1.1);
 }
 
 .container-sec4 .text-stairs {
-    position: relative;
-    top: 100px;
+    margin-top: 7rem;
 }
 
 .container-sec4 .bathroom {
     margin-top: 4rem;
 }
 
+.button-sec4 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+}
+
+.container-sec4 button {
+    background-color: var(--green-color);
+    border: none;
+    color: var(--text-color);
+    padding: .7rem 2rem;
+    font-size: .85rem;
+    font-family: poppins;
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+.button-sec4 i {
+    transition: .5s;
+    margin-left: 2px;
+}
+
+.button-sec4 button:hover i {
+    transform: scale(1.4);
+    transform: translateX(5px);
+}
 
 
+/* MAP */
+#map {
+    width: 100%;
+    height: 100%;
+    padding: 0px 1.4rem;
+    padding-top: 3rem;
+    padding-bottom: 8rem;
+    background-color: var(--green-color);
+}
+
+.container-map {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.container-map .img-map img {
+    width: 650px;
+    height: 100%;
+}
+
+.countries-wrapper {
+    width: 100%;
+    height: 100%;
+}
+
+.countries-wrapper h1 {
+    font-family: 'wanoSemibold';
+    font-size: 5rem;
+    color: var(--text-color);
+    text-align: center;
+    line-height: 72px;
+    letter-spacing: 2px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid var(--white-color);
+}
+
+.countries-wrapper .countries {
+    display: flex;
+    justify-content: center;
+    margin-top: 1.3rem;
+    gap: 30px;
+    font-family: 'quicksand';
+    font-weight: 500;
+    text-align: center;
+    font-size: 1.2rem;
+    color: var(--text-color);
+}
+
+.countries span {
+    font-size: .9rem;
+}
+
+.countries p {
+    padding-right: 1.5rem;
+    line-height: 20px;
+}
+
+.countries .border {
+    border-right: 1px solid var(--white-color);
+}
+
+
+/* PROMOTION */
+#promotion {
+    background-color: var(--green-color);
+    padding: 10px 0px;
+}
+
+#promotion marquee {
+    font-family: "wanoSemibold";
+    color: #FFF8EA;
+    font-size: 4.7rem;
+    text-align: center;
+    border-top: 3px solid #FFF8EA;
+    border-bottom: 3px solid #FFF8EA;
+    padding: 1rem 0px;
+}
+
+/* DISCOUNT */
+#discount {
+    width: 100%;
+    height: 100%;
+    padding-top: 4rem;
+    background-color: var(--green-color);
+    padding-top: 8rem;
+}
+
+.container-discount {
+    width: 90%;
+    height: 450px;
+    background-color: #FFF8EA;
+    display: flex;
+    gap: 20px;
+    margin: 0px auto;
+    padding: .7rem;
+}
+
+.container-discount .img-discount {
+    width: 100%;
+    height: 100%;
+    border: 3px solid var(--green-color);
+    position: relative;
+}
+
+.container-discount .img-discount::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: var(--green-color);
+    position: absolute;
+    bottom: 0;
+    z-index: 999;
+    opacity: .5;
+}
+
+.container-discount .img-discount::after {
+    content: 'GET 10%';
+    width: 50%;
+    position: absolute;
+    bottom: 0;
+    right: 25%;
+    z-index: 1000;
+    font-family: 'wanoSemibold';
+    font-size: 10.4rem;
+    color: var(--text-color);
+    transition: .5s;
+    opacity: 1;
+}
+
+.img-discount img {
+    width: 100%;
+    height: 100%;
+}
+
+.container-discount .card-discount {
+    width: 100%;
+    height: 100%;
+}
+
+.container-discount .card-discount .title-discount{
+    font-family: 'quicksand';
+    font-size: 1.8rem;
+    letter-spacing: 2px;
+    font-weight: 500;
+}
+
+.container-discount form {
+    margin-top: 5.5rem;
+}
+
+.container-discount form  p {
+    margin-bottom: .6rem;
+    color: var(--text-color);
+    font-family: 'quicksand';
+    font-weight: 500;
+}
+
+.container-discount form input {
+    width: 80%;
+    border: none;
+    border-bottom: 1.5px solid var(--text-color);
+    background-color: var(--white-color);
+    color: var(--text-color);
+    padding-bottom: 5x;
+}
+
+input:focus {
+    outline:none;
+}
+
+.container-discount .card-discount .name-input {
+    margin-bottom: 2rem;
+}
+
+#discount .container-discount .card-discount .button-discount {
+    background-color: var(--green-color);
+    border: none;
+    color: var(--text-color);
+    padding: .58rem 2rem;
+    font-size: .85rem;
+    font-family: poppins;
+    border-radius: 25px;
+    cursor: pointer;
+    margin-top: 4rem;
+}
+
+.card-discount .button-discount i {
+    transition: .5s;
+}
+
+.card-discount .button-discount:hover i {
+    transform: scale(1.4);
+    transform: translateX(5px);
+}
 
 @media (max-width: 590px) {
     #big-text p {
@@ -341,6 +584,11 @@ span i {
         left: 0;
     }
 
+    .tagline-wrapper {
+        margin: 0px auto;
+        margin-bottom: .7rem;
+    }
+
     .tagline p{
         font-size: 5px;
         margin-bottom: 8px;
@@ -356,6 +604,7 @@ span i {
         height: 90%;
         order: 0;
         background-position: center;
+        background-attachment: scroll;
     }
 
     /* sec3 */ 
@@ -375,15 +624,6 @@ span i {
         z-index: 2;
     }
 
-    .container-sec3 .left-sec3 .star {
-        z-index: 1;
-    }
-
-    .container-sec3 .left-sec3 .star-1 {
-        top: 0;
-        right: 10px;
-    }
-
     .container-sec3 .right-sec3 {
         margin-top: 2.6rem;
     }
@@ -392,11 +632,61 @@ span i {
         font-size: 3rem;
     }
     
+    /* sec4 */
+
+    .container-sec4 .left-sec4 .container-img-left {
+        width: 301px;
+        height: 155px;
+    }
+
+    .container-sec4 .right-sec4 .container-img-stairs {
+        height: 301px;
+        width: 155px;
+    }
+
+    .container-sec4 .right-sec4 {
+        margin-top: 5.8rem;
+    }
+
+    #sec4 .container-sec4 .right-sec4 .title-sec4 {
+        font-size: 2.6rem;
+    }
+
+    #sec4 .container-sec4 .title-sec4 {
+        font-size: 3rem;
+    }
+
+   .container-sec4 .desc-sec4 {
+        font-size: 1.2rem;
+        margin-bottom: 2rem;
+        margin-top: .6rem;
+    }
+
+    #sec4 .container-sec4 .bathroom .title-sec4 {
+        font-size: 2.6rem;
+    }
+
+    /* MAP */
+    .container-map .img-map img {
+        width: 350px;
+        height: 100%;
+    }
+
+    .countries-wrapper h1 {
+        font-size: 3rem;
+        line-height: 48px;
+    }
+
+    /* DISCOUNT */
+    .container-discount .img-discount::before {
+        opacity: .2;
+    }
+
 }
 
 
 /* media queries */
-@media (max-width: 758px) {
+@media (max-width: 778px) {
     /* navbar */
 
     .hamburger-menu .dua.seratus {
@@ -442,101 +732,157 @@ span i {
     }
 
    .navbar .navbar-nav {
-    position: absolute;
-    top: 100%;
-    right: -180%;
-    background-color: #B1C387;
-    border-top-left-radius: 20px;
-    width: 20rem;
-    height: 100vh;
-    transition: .3s;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+        position: absolute;
+        top: 100%;
+        right: -180%;
+        background-color: #B1C387;
+        border-top-left-radius: 20px;
+        width: 20rem;
+        height: 100vh;
+        transition: .3s;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
    }
 
    .navbar-nav a {
-    margin-top: 10px;
-    font-size: 1.1rem;
+        margin-top: 10px;
+        font-size: 1.1rem;
    }
 
    .navbar-nav a::after {
-    content: '';
-    display: block;
-    margin: 0px auto;
-    width: 1%;
-    border-bottom: 2px solid var(--white-color);
-    transform: scale(0);
-    transition: .3s ;
+        content: '';
+        display: block;
+        margin: 0px auto;
+        width: 1%;
+        border-bottom: 2px solid var(--white-color);
+        transform: scale(0);
+        transition: .3s ;
    }
 
-.navbar-nav a:hover::after {
-    transform: scale(1);
-    width: 50%;
-}
+    .navbar-nav a:hover::after {
+        transform: scale(1);
+        width: 50%;
+    }
 
    .navbar .navbar-nav.active {
-    right: 0;
+        right: 0;
    }
 
    /* header */
    .title-header {
-    height: 200px;
+        height: 200px;
    }
 
    .title-header p {
-    font-size: 9rem;
+        font-size: 9rem;
    }
 
    .tagline {
-    text-align: center;
+        text-align: center;
    }
 
    .tagline p {
-    font-size: 1.5rem;
-    text-align: center;
-    line-height: 38px;
-    margin-bottom: 2px;
+        font-size: 1.5rem;
+        /* text-align: center; */
+        line-height: 38px;
+        margin-bottom: 2px;
    }
 
    /* sec3 */
    .container-sec3 {
-    display: flex;
-    flex-direction: column;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
    }
 
    .container-sec3 .left-sec3 {
-    height: 100%;
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: space-around;
+        height: 100%;
+        width: 100%;
+        position: relative;
+        display: flex;
+        justify-content: space-around;
    }
 
    .container-sec3 .left-sec3 .img1 {
-    position: relative;
-    top: 0;
-    bottom: 0;
+        position: relative;
+        top: 0;
+        bottom: 0;
    }
 
    .container-sec3 .left-sec3 .img2 {
-    position: relative;
-    right: 0;
+        position: relative;
+        right: 0;
+        left: 0;
+        top: 50px;
+        bottom: 0;
+   }
+
+   .right-sec3 {
+        margin-top: 1.4rem;
+   }
+
+   /* sec4 */
+   .container-sec4 .left-sec4 {
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        align-items: center;
+        text-align: center;
+   }
+
+   .container-sec4 .left-sec4 .container-img-left .img-left {
     left: 0;
-    top: 50px;
-    bottom: 0;
    }
 
-   .container-sec3 .left-sec3 .star-1 {
-    right: 45%;
+   .container-sec4 .title-sec4 {
+        font-size: 6rem;
    }
 
-   .container-sec3 .left-sec3 .star-2 {
-    right: 40%;
+   .container-sec4 .desc-sec4 {
+        margin-bottom: 2rem;
    }
 
-   .container-sec3 .left-sec3 .star-3 {
-    left: 10%;
+   .container-sec4 .right-sec4 {
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        align-items: center;
+        text-align: center;
+   }
+
+   .container-sec4 .text-stairs {
+        order: 1;
+        margin-top: 2rem;
+   }
+
+   /* MAP */
+   #map {
+    padding-bottom: 5rem;
+   }
+
+   /* DISCOUNT */
+   #discount {
+    padding-top: 5rem;
+   }
+
+   .container-discount {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+   }
+
+   .container-discount form {
+    margin-top: 2rem;
+   }
+
+   #discount .container-discount .card-discount .button-discount {
+    margin-top: 2rem;
+   }
+
+   .container-discount .img-discount::after {
+    display: none;
    }
 }
 
@@ -560,6 +906,18 @@ span i {
 
     #big-text {
         padding: 1.3rem;
+    }
+
+    .container-map {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .countries-wrapper h1 {
+        margin-top: 1rem;
     }
 }
 
